Text alignment / page size fixes
creating new section next w/ navbar to go with it.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,18 +1,13 @@
 @import "tailwindcss";
 
 :root {
-  --background: #F3F3F3;
+  --background: #f3f3f3; /* Your light gray background */
   --foreground: #181717;
   --muted-foreground: #606060;
-}
-
-@theme inLine {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-dmsans: var(--font-dm-sans);
+  --primary: #2429af; 
 }
 
 body {
-
+  color: var(--foreground);
+  background: var(--background);
 }
